# RoadTestVPoAClassifier

./: .gitignore  .~lock.classified.csv#  CMakeLists.txt  README.md  classified.csv
src/: .DatasetReader.cpp.swp  .main_classifier.cpp.swp  AcuerdoWriter.cpp  AcuerdoWriter.h  DatasetReader.cpp  DatasetReader.h  main_classifier.cpp
