cmake_minimum_required(VERSION 2.8)
project( classifier )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( classifier src/main_classifier.cpp )
add_library( DatasetReader src/DatasetReader.cpp )
add_library( AcuerdoWriter src/AcuerdoWriter.cpp )
target_link_libraries( classifier AcuerdoWriter )
target_link_libraries( classifier DatasetReader )
target_link_libraries( classifier tesseract )
target_link_libraries( classifier ${OpenCV_LIBS} )
